Delineacion urbana: observaciones de archivo word

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3327,7 +3327,9 @@ error.impuestoGasolina.sobretasa.error3.attrib7 = Error al leer cálculo de gaso
 error.impuestoGasolina.sobretasa.error3.attrib8 = Error al leer cálculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} 
 error.impuestoGasolina.sobretasa.error3.attrib9 = Error al leer cálculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} {8} 
 error.impuestoGasolina.sobretasa.error3.attrib10 = Error al leer cálculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} {8} {9} 
-error.impuestoGasolina.sobretasa.error4 = Error al leer información de delineación urbana {0}
+error.impuestoGasolina.sobretasa.error4 = Error al leer detalle de pago {0}
+error.impuestoDU.info.error = Error al leer  de delineación urbana
+error.impuestoDU.calculo.error = Error al leer calculo de delineación urbana
 #->FIN dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
 #->INI dev-federico 11/02/2019 textos para Consulta de estado de cuenta
 consultas.estadoDeCuenta.tipoConsulta = Tipo:
