--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3464,6 +3464,7 @@ delineacion.urbana.dec.firm.paglin=Pagar en Línea
 delineacion.urbana.dec.firm.regresar=Regresar
 delineacion.urbana.dec.firm.cancelar=Cancelar
 delineacion.urbana.dec.firm.prerete= Presentar Retención
+delineacion.urbana.dec.firm.predec= Presentar Declaración
 
 delineacion.urbana.radicados.nota.importante= Importante: 
 delineacion.urbana.radicados.nota.demas=Si en el siguiente recuadro no aparece un radicado asociado a un CDU debe ingresar en el botón de trámites, crear trámite, modificación de la sujeción pasiva, Delineación Urbana, para agregar dicho radicado.
