Cambios en vista de ICA, se eliminan archivos adicionales de ICA propuesta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4159,11 +4159,12 @@ ica.inicial.detalle.edomat=Estado matrícula
 ica.inicial.detalle.clasiden=Clase identidad sin ánimo de lucro
 
 ica.inicial.activecono.title=Actividades econónomicas
-ica.inicial.activecono.actprin=Actividad económica principal
+ica.inicial.activecono.actprin=Actividad económica
 ica.inicial.activecono.ciiu=Código CIIU
 ica.inicial.activecono.denomi=Denominación de actividad económica
 ica.inicial.activecono.feciniact=Fecha de inicio de actividades
 ica.inicial.activecono.fecceseact=Fecha de cese de actividades
+ica.inicial.activecono.principal= Principal
 
 ica.inicial.estableci.title=Establecimiento
 ica.inicial.estableci.nomesta=Nombre Establecimiento
@@ -4182,15 +4183,13 @@ ica.inicial.datecono.title=Datos económicos
 ica.inicial.datecono.actsoc=Actico total
 ica.inicial.datecono.pastot=Pasivo total
 ica.inicial.datecono.patneto=Patrimonio neto
-ica.inicial.datecono.ingoper=Ingresos no operacionales
+ica.inicial.datecono.ingoper=Ingresos operacionales
+ica.inicial.datecono.ingnoper=Ingresos no operacionales
 ica.inicial.datecono.paspat=Pasivo patrimonio
 
 ica.inicial.marcas.title=Marcas
-ica.inicial.marcas.tipmarca=Tipo de marca
-ica.inicial.marcas.caodmarca=Código de la marca
+ica.inicial.marcas.descrimarca=Descripción de marca
 ica.inicial.marcas.valexe=Valor de exención
-ica.inicial.marcas.ciiu=Código CIIU
-ica.inicial.marcas.denoacteco=Denominación de actividad económica
 ica.inicial.marcas.fecvaldesde=Fecha de validez desde
 ica.inicial.marcas.fecvalhasta=Fecha de validez hasta
 
