Cambios en Declaración ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4252,6 +4252,8 @@ ica.declaracion.generales.cantesta= Cant. Establecimientos
 ica.declaracion.generales.regimencomun=Régimen común
 ica.declaracion.generales.regsimpli=Régimen simplificado
 ica.declaracion.generales.aporte=¿Desea realizar el aporte voluntario del 10%?
+ica.declaracion.generales.entfinan= Entidad Financiera
+ica.declaracion.generales.regitribut=Regimen Tributario
 
 ica.declaracion.actidentro.titulo=Actividades económicas Ingresos recibidos en Bogotá
 ica.declaracion.actidentro.acti=Actividad económica principal
@@ -4261,7 +4263,7 @@ ica.declaracion.actidentro.tarifa=Tarifa
 ica.declaracion.actidentro.inggrav=Ingresos Gravados
 
 ica.declaracion.actifuera.titulo=Actividades económicas Ingresos recibidos fuera de Bogotá
-ica.declaracion.actifuera.ciiu=Código CIIU
+ica.declaracion.actifuera.ciiu= Denominación de Actividad Económica (Código CIIU)
 ica.declaracion.actifuera.deno=Denominación de actividad económica
 ica.declaracion.actifuera.codmuni=Código municipio
 ica.declaracion.actifuera.municipio=Municipio
@@ -4269,7 +4271,10 @@ ica.declaracion.actifuera.ingre=Ingresos
 ica.declaracion.actifuera.descargar=Descargar
 ica.declaracion.actifuera.ayuda=Ayuda ICA
 
-ica.declaracion.total.titulo=Total ingresos gravables
+ica.declaracion.total.titulo=Total ingresos netos gravables
+ica.declaracion.total.actprinci=Actividad económica principal
+ica.declaracion.total.denomi=Denominación actividad económica (Código CIIU)
+ica.declaracion.total.ingnet= Ingreso neto Gravable
 ica.declaracion.total.vigencia=Vigencia
 ica.declaracion.total.numide=Número de identificación
 ica.declaracion.total.nombre=Nombre o Razón social
@@ -4280,21 +4285,27 @@ ica.declaracion.total.valtotaliva=Valor total ingreso bruto sin iva
 ica.declaracion.total.valtotaldev=Valor total devoluciones, rebajas, descuentos
 ica.declaracion.total.descargar=Descargar
 ica.declaracion.total.ayuda=Ayuda ICA
+ica.declaracion.total.angrava=Año Gravable
+ica.declaracion.total.tipdoc=Tipo de documento
+ica.declaracion.total.direc=Dirección
+ica.declaracion.total.tel=Teléfono
 
 ica.declaracion.valor.titulo=Valor Retenido
-ica.declaracion.valor.vigencia=Vigencia
+ica.declaracion.valor.angrav=Año Gravable
+ica.declaracion.valor.tipdoc=Tipo de documento
 ica.declaracion.valor.numide=Número de identificación
 ica.declaracion.valor.nombre=Nombre o Razón social
-ica.declaracion.valor.dane=Código de la ciudad DANE
-ica.declaracion.valor.pagiva=Monto de pago sin iva
+ica.declaracion.valor.direccion=Dirección
+ica.declaracion.valor.tel=Teléfono
+ica.declaracion.valor.municipio=Municipio
 ica.declaracion.valor.taraplicada=Tarifa aplicada
 ica.declaracion.valor.montoret=Monto que retuvieron en el periodo
-ica.declaracion.valor.descargar=Descargar
-ica.declaracion.valor.ayuda=Ayuda ICA
+ica.declaracion.valor.calcular=Calcular
 
-ica.declaracion.deducciones.titulo= Deducciones DB
+
+ica.declaracion.deducciones.titulo= Deducciones, exenciones y actividades no sujetas
 ica.declaracion.deducciones.deduccion=Deducción
-ica.declaracion.deducciones.monto=Monto
+ica.declaracion.deducciones.monto=Valor deducción
 
 ica.declaracion.liquidacion.titulo=Liquidación
 ica.declaracion.liquidacion.valtot=Valor total de unidades comerciales adicionales
@@ -4303,24 +4314,27 @@ ica.declaracion.liquidacion.sanciones=Sanciones
 ica.declaracion.liquidacion.intmora=Intereses de Mora
 ica.declaracion.liquidacion.acteco=Actividades económicas secundarias
 ica.declaracion.liquidacion.totinord=Total Ingresos Ordinarios y Extraordinarios de periodo
-ica.declaracion.liquidacion.totinobte=Total ingresos obtenidos fuera del Distrito Capital
-ica.declaracion.liquidacion.totinbrut=Total ingresos brutos obtenidos en el Distrito Capital
+ica.declaracion.liquidacion.totinbrut=Total ingresos brutos recibidos en Bogotá
 ica.declaracion.liquidacion.devrebdes=Devoluciones, rebajas y descuentos
-ica.declaracion.liquidacion.dedexeact=Deducciones, exenciones y actividades no sujetas
+ica.declaracion.liquidacion.dedexeact= Total deducciones, exenciones y actividades no sujetas
 ica.declaracion.liquidacion.totinnetos=Total ingresos netos gravables
 ica.declaracion.liquidacion.impincom=Impuesto de industria y comercio
-ica.declaracion.liquidacion.impavtableros=Impuesto de acisos y tableros (15% del IC)
+ica.declaracion.liquidacion.impavtableros=Impuesto de avisos y tableros (15% del IC)
 ica.declaracion.liquidacion.totimpcar=Total impuesto a cargo
 ica.declaracion.liquidacion.valret=Valor retenido a título de industria y comercio
 ica.declaracion.liquidacion.totsaldo=Total saldo a cargo
 ica.declaracion.liquidacion.totpag=Total a pagar
 ica.declaracion.liquidacion.totpagvol=Total a pagar con pago voluntario
 ica.declaracion.liquidacion.calcular=Calcular
+ica.declaracion.liquidacion.totobfuerabogo=Total ingresos obtenidos fuera de Bogotá
+ica.declaracion.liquidacion.valtot=Valor total de unidades comerciales adicionales
+ica.declaracion.liquidacion.valpag=Valor a pagar
+ica.declaracion.liquidacion.aportvol=¿Desea realizar aporte voluntario?
 
-ica.declaracion.firma.titulo=Firma del representante legal o del Contribuyente (si es persona natural)
-ica.declaracion.firma.obligado=¿Está obligado a firmar la declaración según el numeral 7 del artículo 13 del decreto 807 de 1993?
-ica.declaracion.firma.revisor=Revisor
-ica.declaracion.firma.contador=Contador
+ica.declaracion.firma.titulo=Firmas
+ica.declaracion.firma.obligado=¿Se necesita firma de otra persona?
+ica.declaracion.firma.revisor=Revisor/Contador
+ica.declaracion.firma.replegal=Representante Legal
 ica.declaracion.firma.tipoiden=Tipo de Identificación
 ica.declaracion.firma.numide=No. Identificación
 ica.declaracion.firma.numtarjeta=No. Tarjeta Profesional
