Cambios en vista de declaracion ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4142,8 +4142,8 @@ conciliaciones.upload.messages.error=El archivo {0} ha sido procesado incorrecta
 ica.inicial.title=ICA
 ica.inicial.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
 ica.inicial.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
-ica.inicial.table.tipdoc=Tipo de Documento
-ica.inicial.table.numdoc=Número de Documento
+ica.inicial.table.tipdoc=Tipo de documento
+ica.inicial.table.numdoc=Número de documento
 ica.inicial.table.nombre=Nombre
 
 ica.inicial.detalle.title= Detalle ICA
@@ -4205,65 +4205,33 @@ ica.inicial.representantes.presendecla=Presentar Declaración
 ica.inicial.representantes.rop=ROP
 ica.inicial.representantes.paglinea=Pago en línea
 
-ica.propuesta.title=ICA
-ica.propuesta.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
-ica.propuesta.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
-ica.propuesta.table.tipdoc=Tipo de Documento
-ica.propuesta.table.numdoc=Número de Documento
-ica.propuesta.table.nombre=Nombre
-ica.propuesta.table.angrav= Año Gravable
-ica.propuesta.table.period=Periodo
-
-ica.propuesta.detalle.title= Detalle ICA
-ica.propuesta.detalle.fecceseact= Fecha cese actividades en Bogotá
-ica.propuesta.detalle.feciniact= Fecha de inicio de actividades en Bogotá
-ica.propuesta.detalle.cantesta=Cantidad de establecimientos
-ica.propuesta.detalle.causal=Causal cese de actividades
-ica.propuesta.detalle.regimen=Régimen tributario
-ica.propuesta.detalle.mat=Matrícula mercantil
-ica.propuesta.detalle.codliq=Código liquidación
-ica.propuesta.detalle.orgjuri=Organización jurídica
-ica.propuesta.detalle.edomat=Estado matrícula
-ica.propuesta.detalle.clasiden=Clase identidad sin ánimo de lucro
-
-ica.propuesta.representantes.title=Representantes
-ica.propuesta.representantes.tipiden=Tipo de Identificación
-ica.propuesta.representantes.numide=No. Identificación
-ica.propuesta.representantes.nombre=Nombre
-ica.propuesta.representantes.tiprela=Tipo de relación
-ica.propuesta.representantes.fecdesde=Fecha desde
-ica.propuesta.representantes.fechasta=Fecha hasta
-ica.propuesta.representantes.regresar=Regresar
-ica.propuesta.representantes.presendecla=Presentar Declaración
-ica.propuesta.representantes.rop=ROP
-
 ica.declaracion.title=Declaración ICA
 ica.declaracion.descripcion1=El impuesto de Industria y Comercio se genera por el ejercicio o realización directa o indirecta de cualquier actividad industrial, comercial o de servicios en jurisdicción del Distrito Capital de Bogotá, ya sea que se cumplan de forma permanente u ocasional, en inmueble determinado, con establecimiento de comercio o sin ellos
 ica.declaracion.descripcion2=Si Usted es obligado a estar inscrito en la Cámara de comercio de Bogotá y encuentra inconsistencias en la información, diríjase a ese organismo para el respectivo ajuste. De lo contrario deberá corregir las posibles inconsistencias a través del módulo RIT de esta Oficina Virtual.
-ica.declaracion.table.tipdoc=Tipo de Documento
-ica.declaracion.table.numdoc=Número de Documento
+ica.declaracion.table.tipdoc=Tipo de documento
+ica.declaracion.table.numdoc=Número de documento
 ica.declaracion.table.nombre=Nombre
 
 ica.declaracion.generales.titulo=Datos Generales
 ica.declaracion.generales.aniograv= Año gravable
 ica.declaracion.generales.periodo= Periodo
 ica.declaracion.generales.opcuso= Opciones de uso
-ica.declaracion.generales.cantesta= Cant. Establecimientos
+ica.declaracion.generales.cantesta= Cant. establecimientos
 ica.declaracion.generales.regimencomun=Régimen común
 ica.declaracion.generales.regsimpli=Régimen simplificado
 ica.declaracion.generales.aporte=¿Desea realizar el aporte voluntario del 10%?
-ica.declaracion.generales.entfinan= Entidad Financiera
-ica.declaracion.generales.regitribut=Regimen Tributario
+ica.declaracion.generales.entfinan= Entidad financiera
+ica.declaracion.generales.regitribut=Regimen tributario
 
-ica.declaracion.actidentro.titulo=Actividades económicas Ingresos recibidos en Bogotá
+ica.declaracion.actidentro.titulo=Actividades económicas ingresos recibidos en Bogotá
 ica.declaracion.actidentro.acti=Actividad económica principal
 ica.declaracion.actidentro.ciiu=Código CIIU
 ica.declaracion.actidentro.deno=Denominación de actividad económica
 ica.declaracion.actidentro.tarifa=Tarifa
-ica.declaracion.actidentro.inggrav=Ingresos Gravados
+ica.declaracion.actidentro.inggrav=Ingresos gravados
 
 ica.declaracion.actifuera.titulo=Actividades económicas Ingresos recibidos fuera de Bogotá
-ica.declaracion.actifuera.ciiu= Denominación de Actividad Económica (Código CIIU)
+ica.declaracion.actifuera.ciiu= Denominación de Actividad económica (Código CIIU)
 ica.declaracion.actifuera.deno=Denominación de actividad económica
 ica.declaracion.actifuera.codmuni=Código municipio
 ica.declaracion.actifuera.municipio=Municipio
@@ -4274,7 +4242,7 @@ ica.declaracion.actifuera.ayuda=Ayuda ICA
 ica.declaracion.total.titulo=Total ingresos netos gravables
 ica.declaracion.total.actprinci=Actividad económica principal
 ica.declaracion.total.denomi=Denominación actividad económica (Código CIIU)
-ica.declaracion.total.ingnet= Ingreso neto Gravable
+ica.declaracion.total.ingnet= Ingreso neto gravable
 ica.declaracion.total.vigencia=Vigencia
 ica.declaracion.total.numide=Número de identificación
 ica.declaracion.total.nombre=Nombre o Razón social
@@ -4285,13 +4253,13 @@ ica.declaracion.total.valtotaliva=Valor total ingreso bruto sin iva
 ica.declaracion.total.valtotaldev=Valor total devoluciones, rebajas, descuentos
 ica.declaracion.total.descargar=Descargar
 ica.declaracion.total.ayuda=Ayuda ICA
-ica.declaracion.total.angrava=Año Gravable
+ica.declaracion.total.angrava=Año gravable
 ica.declaracion.total.tipdoc=Tipo de documento
 ica.declaracion.total.direc=Dirección
 ica.declaracion.total.tel=Teléfono
 
 ica.declaracion.valor.titulo=Valor Retenido
-ica.declaracion.valor.angrav=Año Gravable
+ica.declaracion.valor.angrav=Año gravable
 ica.declaracion.valor.tipdoc=Tipo de documento
 ica.declaracion.valor.numide=Número de identificación
 ica.declaracion.valor.nombre=Nombre o Razón social
@@ -4313,7 +4281,7 @@ ica.declaracion.liquidacion.valexe=Valor de exención
 ica.declaracion.liquidacion.sanciones=Sanciones
 ica.declaracion.liquidacion.intmora=Intereses de Mora
 ica.declaracion.liquidacion.acteco=Actividades económicas secundarias
-ica.declaracion.liquidacion.totinord=Total Ingresos Ordinarios y Extraordinarios de periodo
+ica.declaracion.liquidacion.totinord=Total Ingresos ordinarios y extraordinarios de periodo
 ica.declaracion.liquidacion.totinbrut=Total ingresos brutos recibidos en Bogotá
 ica.declaracion.liquidacion.devrebdes=Devoluciones, rebajas y descuentos
 ica.declaracion.liquidacion.dedexeact= Total deducciones, exenciones y actividades no sujetas
@@ -4337,12 +4305,12 @@ ica.declaracion.firma.revisor=Revisor/Contador
 ica.declaracion.firma.replegal=Representante Legal
 ica.declaracion.firma.tipoiden=Tipo de Identificación
 ica.declaracion.firma.numide=No. Identificación
-ica.declaracion.firma.numtarjeta=No. Tarjeta Profesional
+ica.declaracion.firma.numtarjeta=No. tarjeta profesional
 ica.declaracion.firma.nombre=Nombre
 ica.declaracion.firma.regresar=Regresar
-ica.declaracion.firma.prendecla=Presentar Declaración
+ica.declaracion.firma.prendecla=Presentar declaración
 ica.declaracion.firma.pagliena=Pagar en línea
-ica.declaracion.firma.rop=Generar ROP
+
 
 #Agente Retenedor
 retenedor.servicio.titulo=Mis actividades ReteICA
