--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4311,6 +4311,11 @@ ica.declaracion.firma.regresar=Regresar
 ica.declaracion.firma.prendecla=Presentar declaración
 ica.declaracion.firma.pagliena=Pagar en línea
 
+ica.declaracion.regimen.r1=RÉGIMEN SIMPLIFICADO
+ica.declaracion.regimen.r2=RÉGIMEN COMÚN ANUAL
+ica.declaracion.regimen.r3=RÉGIMEN COMÚN BIMESTRAL
+ica.declaracion.regimen.r4=RÉGIMEN SIMPLE
+
 
 #Agente Retenedor
 retenedor.servicio.titulo=Mis actividades ReteICA
