Sobretasa gasolina: agregar linea default en pantalla "informacion de la declaracion" para el caso en el que el WS regresa respuesta vacia

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3315,7 +3315,7 @@ impuestos.presentarDeclaracion.deliur.prereten=Presentar retención
 
 
 #->INI dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
-error.impuestoGasolina.sobretasa.error1 = Error al leer detalle de gasolina {0}
+error.impuestoGasolina.sobretasa.error1 = Error al leer detalle de gasolina
 error.impuestoGasolina.sobretasa.error2 = Error al leer información del Contribuyente
 error.impuestoGasolina.sobretasa.error3.attrib1 = Error al leer cálculo de gasolina {0}
 error.impuestoGasolina.sobretasa.error3.attrib2 = Error al leer cálculo de gasolina {0} {1}
