Cambio en etiquetas de ICA y funcionalidad en campos de ICA Declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4175,12 +4175,12 @@ ica.inicial.estableci.fecdesde=Fecha desde
 ica.inicial.estableci.edomat=Estado matrícula
 ica.inicial.estableci.fechasta=Fecha hasta
 ica.inicial.estableci.valactivo= Valor activo asociado
-ica.inicial.estableci.cantperso= Cant. Personal ocupado
+ica.inicial.estableci.cantperso= Cantidad personal ocupado
 ica.inicial.estableci.codpost=Código postal
 ica.inicial.estableci.ciiu=Código CIIU
 
 ica.inicial.datecono.title=Datos económicos
-ica.inicial.datecono.actsoc=Actico total
+ica.inicial.datecono.actsoc=Activo total
 ica.inicial.datecono.pastot=Pasivo total
 ica.inicial.datecono.patneto=Patrimonio neto
 ica.inicial.datecono.ingoper=Ingresos operacionales
