Se agregan cambios en los margenes de la página inicial para que se muestre el botón dentro del tamaño de la página y se agrega avance de reteica

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1969,7 +1969,7 @@ mirit.pj.licenseNumber=Número de matrícula mercantil
 mirit.pj.liqDate=Fecha de Liquidación
 mirit.pj.retainerType=Tipo de retenedor
 
-mirit.pj.claseIC=Clase IC*
+mirit.pj.claseIC=Clase IC
 
 mirit.buttons.certificate=Cerficación RIT
 mirit.buttons.update=Actualizar RIT
@@ -4316,6 +4316,66 @@ ica.declaracion.regimen.r2=RÉGIMEN COMÚN ANUAL
 ica.declaracion.regimen.r3=RÉGIMEN COMÚN BIMESTRAL
 ica.declaracion.regimen.r4=RÉGIMEN SIMPLE
 
+reteica.inicial.table.titulo= Mis actividades ReteICA
+reteica.inicial.table.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complemenatrios.
+reteica.inicial.table.tipodoc=Tipo de documento
+reteica.inicial.table.numdoc=Número de documento
+reteica.inicial.table.nombre=Nombre
+
+reteica.inicial.carga.anio=Año
+reteica.inicial.carga.periodo=Periodo
+reteica.inicial.carga.titulo=Carga de archivo
+reteica.inicial.carga.descarga= 1. Descarga el siguiente archivo Excel a tu computador
+reteica.inicial.carga.descargar=Descargar
+reteica.inicial.carga.agrega=2. Agrega las retenciones que necesitas registrar.
+reteica.inicial.carga.guarda= 3. Guarda el archivo en formato .csv y sin cambiar el nombre.
+reteica.inicial.carga.adjunta= 4. Adjúntalo nuevamente.
+reteica.inicial.carga.seleccionar=Seleccionar archivo:
+reteica.inicial.carga.regresar=Regresar
+reteica.inicial.carga.cargar=Cargar
+reteica.inicial.carga.consultar=Consultar Cargas
+
+
+reteica.consulta.inicial.titulo= Mis actividades ReteICA
+reteica.consulta.inicial.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complemenatrios.
+
+reteica.consulta.estado.titulo=Estado de Cargas
+reteica.consulta.estado.descripcion1=Para continuar con tu declaración, es importante que tus archivos de carga se procesen correctamente (Estado: Aceptado).
+reteica.consulta.estado.descipcion2=Si tu archivo fue "Rechazado", podrás descargar los errores que hayas tenido para cargarlo nuevamente.
+reteica.consulta.estado.anio=Seleccione el año a consultar
+reteica.consulta.estado.fechcarga=Fecha de carga
+reteica.consulta.estado.nomdoc=Nombre del documento
+reteica.consulta.estado.perrepor=Periodo reportado
+reteica.consulta.estado.estado=Estado
+reteica.consulta.estado.detalle=Detalle
+reteica.consulta.estado.deseacargar=Desea volver a cargar
+reteica.consulta.estado.regresar=Regresar
+
+reteica.declaracion.table.titulo= Mis actividades ReteICA
+reteica.declaracion.table.descripcion=El sistema de retenciones aplica al impuesto de Industria y Comercio, teniendo en cuenta las normas específicas adoptadas por el Distrito Capital y las generales del sistema de retenciones sobre el impuesto de renta y complemenatrios.
+reteica.declaracion.table.tipodoc=Tipo de documento
+reteica.declaracion.table.numdoc=Número de documento
+reteica.declaracion.table.nombre=Nombre
+
+reteica.declaracion.juridico.titulo=Jurídico
+reteica.declaracion.juridico.base=Base de la retención
+reteica.declaracion.juridico.totalreten=Total de retenciones realizadas en el periodo
+reteica.declaracion.juridico.descuentos=Descuentos por devolución de retenciones
+reteica.declaracion.juridico.totretdec=Total de retenciones a declarar
+reteica.declaracion.juridico.sancion=Sancion
+reteica.declaracion.juridico.totsaldoca=Total saldo a cargo
+reteica.declaracion.juridico.valpag=Valor a pagar
+reteica.declaracion.juridic.interes=Interes de mora
+reteica.declaracion.juridico.totpagar=Total a pagar
+reteica.declaracion.juridico.actualizar=Actualizar
+
+reteica.declaracion.firma.titulo=Información firma del declarante
+reteica.declaracion.firma.agregarfirmantes=¿Desea agregar más firmantes en la declaración?
+reteica.declaracion.firma.agregar=Agregar
+reteica.declaracion.firma.tipdoc=Tipo de documento
+reteica.declaracion.firma.numdoc=Número de documento
+reteica.declaracion.firma.nombre=Apellido y Nombres o Razón Social
+reteica.declaracion.firma.firma=Firma
 
 #Agente Retenedor
 retenedor.servicio.titulo=Mis actividades ReteICA
