Se remueve anotacion de controller en clases que no son usadas, elimina importaicon de js que no son usados, se remueven extensiones que no son usadas

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4397,7 +4397,8 @@ tercero.reportar.info.enviar=Enviar
 
 
 
-
+conciliaciones.header.title=Entidades Bancarias
+conciliaciones.header.description=Desde el año 2008 y en el marco del plan estratégico la Dirección de Impuestos de Bogotá se incluyó en el desarrollo del Sistema Tributario SIT II un componente de recepción de información tributaria, encargada de recibir, validar, generar reportes de aceptación o rechazo y cargar en la base de datos tributaria la información transmitida magnéticamente a través de la web, por las entidades bancarias que tienen convenio vigente con la Secretaria Distrital de Hacienda, para la recepción de los tributos distritales.
 
 
 
