Atencion a observaciones Delineacion Urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3403,6 +3403,7 @@ delineacion.urbana.dec.generales.codigo= Código Delineación Urbana
 delineacion.urbana.dec.generales.anigrav=Año Gravable 
 delineacion.urbana.dec.generales.opuso=Opciones de Uso
 delineacion.urbana.dec.generales.tiplicencia=Tipo de Licencia
+delineacion.urbana.dec.generales.Objetolicencia=Objeto de Licencia
 delineacion.urbana.dec.generales.modlicencia=Modalidad de Licencia
 delineacion.urbana.dec.generales.licencia=Licencia
 delineacion.urbana.dec.generales.cauexen=Causal de exención
