--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3838,13 +3838,13 @@ certificacion.inicial.deliur.prereten=Presentar retención
 obligacion.inicial.encabezado= Obligaciones Pendientes
 obligacion.inicial.descripcion=Este servicio te permitirá consultar las obligaciones pendientes que tienes como contribuyente respecto a los impuestos administrados por la Dirección Distrital de Impuestos de Bogotá.
 obligacion.inicial.titulo= Obligaciones Pendientes
-obligacion.inicial.buscarpor= ¿Cómo deseas buscar tus obligaciones pendientes?
+
 obligacion.inicial.sujeto=Sujeto
 obligacion.inicial.impu=Impuesto
 
 obligacion.sujeto.regresar=Regresar
 obligacion.sujeto.descargar=Descargar PDF
-obligacion.sujeto.vigencia=Consulta otra vigencia
+obligacion.sujeto.vigencia=Vigencia
 obligacion.sujeto.buscar=Buscar
 
 obligacion.sujeto.predial.titulo=Predial unificado
@@ -3855,50 +3855,51 @@ obligacion.sujeto.predial.aniograv=Año Gravable
 obligacion.sujeto.predial.edoobliga=Estado de Obligación
 obligacion.sujeto.predial.obligacion=Obligación
 obligacion.sujeto.predial.actooficial=Acto Oficial
+obligacion.sujeto.predial.presendecla=Presentar Declaración
 obligacion.sujeto.predial.genrop=Generar ROP
 obligacion.sujeto.predial.paglinea=Pago en Línea
 
 obligacion.sujeto.ica.titulo=ICA
-obligacion.sujeto.ica.numide=Número de Identificación
-obligacion.sujeto.ica.tipiden=Tipo de Identificación
 obligacion.sujeto.ica.aniograv=Año Gravable
 obligacion.sujeto.ica.periodo=Periodo
 obligacion.sujeto.ica.edoobliga=Estado de Obligación
 obligacion.sujeto.ica.obligacion=Obligación
 obligacion.sujeto.ica.actooficial=Acto Oficial
+obligacion.sujeto.ica.presendecla=Presentar Declaración
 obligacion.sujeto.ica.genrop=Generar ROP
 obligacion.sujeto.ica.paglinea=Pago en Línea
 
-obligacion.sujeto.vehiculos.titulo=Vehícular
-obligacion.sujeto.vehiculos.numide=Número de Identificación
-obligacion.sujeto.vehiculos.tipiden=Tipo de Identificación
+obligacion.sujeto.vehiculos.titulo=Vehículos
+obligacion.sujeto.vehiculos.placa=Placa
+obligacion.sujeto.vehiculos.modelo=Modelo
+obligacion.sujeto.vehiculos.marca=Marca
+obligacion.sujeto.vehiculos.linea=Línea
 obligacion.sujeto.vehiculos.aniograv=Año Gravable
-obligacion.sujeto.vehiculos.periodo=Periodo
 obligacion.sujeto.vehiculos.edoobliga=Estado de Obligación
 obligacion.sujeto.vehiculos.obligacion=Obligación
 obligacion.sujeto.vehiculos.actooficial=Acto Oficial
+obligacion.sujeto.vehiculos.presendecla=Presentar Declaración
 obligacion.sujeto.vehiculos.genrop=Generar ROP
 obligacion.sujeto.vehiculos.paglinea=Pago en Línea
 
 obligacion.sujeto.gasolina.titulo=Sobretasa a la Gasolina
-obligacion.sujeto.gasolina.numide=Número de Identificación
-obligacion.sujeto.gasolina.tipiden=Tipo de Identificación
 obligacion.sujeto.gasolina.aniograv=Año Gravable
 obligacion.sujeto.gasolina.periodo=Periodo
 obligacion.sujeto.gasolina.edoobliga=Estado de Obligación
 obligacion.sujeto.gasolina.obligacion=Obligación
 obligacion.sujeto.gasolina.actooficial=Acto Oficial
-obligacion.sujeto.gasolina.genrop=Generar ROP
+obligacion.sujeto.gasolina.presendecla=Presentar Declaración
 obligacion.sujeto.gasolina.paglinea=Pago en Línea
 
 obligacion.sujeto.delurbana.titulo=Delienación urbana
-obligacion.sujeto.delurbana.numide=Número de Identificación
-obligacion.sujeto.delurbana.tipiden=Tipo de Identificación
+obligacion.sujeto.delurbana.cdu=CDU
+obligacion.sujeto.delurbana.chip=CHIP
+obligacion.sujeto.delurbana.direccion=Dirección
 obligacion.sujeto.delurbana.aniograv=Año Gravable
-obligacion.sujeto.delurbana.periodo=Periodo
 obligacion.sujeto.delurbana.edoobliga=Estado de Obligación
 obligacion.sujeto.delurbana.obligacion=Obligación
 obligacion.sujeto.delurbana.actooficial=Acto Oficial
+obligacion.sujeto.delurbana.presendecla=Presentar Declaración
 obligacion.sujeto.delurbana.genrop=Generar ROP
 obligacion.sujeto.delurbana.paglinea=Pago en Línea
 
@@ -3906,14 +3907,11 @@ obligacion.sujeto.publiext.titulo=Publicidad Exterior
 obligacion.sujeto.publiext.noresol=Número de Resolución
 obligacion.sujeto.publiext.dirvalla=Dirección de la valla
 obligacion.sujeto.publiext.orvalla=Orientación de la valla
-obligacion.sujeto.publiext.numide=Número de Identificación
-obligacion.sujeto.publiext.tipiden=Tipo de Identificación
 obligacion.sujeto.publiext.aniograv=Año Gravable
-obligacion.sujeto.publiext.periodo=Periodo
 obligacion.sujeto.publiext.edoobliga=Estado de Obligación
 obligacion.sujeto.publiext.obligacion=Obligación
 obligacion.sujeto.publiext.actooficial=Acto Oficial
-obligacion.sujeto.publiext.genrop=Generar ROP
+obligacion.sujeto.publiext.presendecla=Presentar Declaración
 obligacion.sujeto.publiext.paglinea=Pago en Línea
 
 obligacion.inicial.selcimpuesto= Impuesto
