Se agregan cambios para relación de pagos y obligaciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3965,32 +3965,110 @@ obligacion.inicial.delineacion.visualizar=Visualizar
 obligacion.inicial.delineacion.pdf=Descargar PDF 
 obligacion.inicial.delineacion.aniograv= Año Gravable
 obligacion.inicial.delineacion.fecreporte=Fecha reporte
+obligacion.inicial.delineacion.numident=No. Identificación
+obligacion.inicial.delineacion.tipiden=Tipo de identificación
 
 
 relacion.inicial.titulo= Relación de Pagos
+relacion.inicial.descripcion= La relación de pagos es un reporte informativo que se expide con la información correspondiente a la declaración presentada y pago de impuestos de los últimos años.
 relacion.inicial.tipo= Tipo de certificación
 relacion.inicial.selcimpuesto= Impuesto
 relacion.inicial.aniograv= Año Gravable
-relacion.inicial.periodo= Periodo
+relacion.inicial.regresar=Regresar
+relacion.inicial.descargar= Descargar PDF
+relacion.inicial.sinreserva=Sin reserva
+relacion.inicial.conreserva=Con reserva
+relacion.inicial.buscar= Buscar
 relacion.inicial.cancelar= Cancelar
-relacion.inicial.generar= Generar
 
+relacion.inicial.predio.titulo=Predial Unificado
 relacion.inicial.predio.chip = CHIP
-relacion.inicial.predio.matricula = Matrícula Inmobiliaría
-relacion.inicial.predio.direccion = Dirección del Predio
-relacion.inicial.predio.seleccionar = Seleccionar
+relacion.inicial.predio.matricula=Matricula
+relacion.inicial.predio.direccion=Dirección
+relacion.inicial.predio.visualizar=Visualizar
+relacion.inicial.predio.aniograv=Año gravable
+relacion.inicial.predio.tipdoc=Tipo de documento
+relacion.inicial.predio.norefrecaudo=No. referencia recaudo
+relacion.inicial.predio.sticker=Sticker
+relacion.inicial.predio.fecpreseta=Fecha de presentación
+relacion.inicial.predio.totpagado=Total pagado
+relacion.inicial.predio.totaporte=Total con aporte coluntario
 
+relacion.inicial.vehiculo.titulo=Vehículos
 relacion.inicial.vehiculo.placa= Placa
-relacion.inicial.vehiculo.marca= Marca
-relacion.inicial.vehiculo.seleccionar= Seleccionar
+relacion.inicial.vehiculo.modelo=Modelo
+relacion.inicial.vehiculo.marca=Marca
+relacion.inicial.vehiculo.linea=Línea
+relacion.inicial.vehiculo.visualizar=Visualizar
+relacion.inicial.vehiculo.aniograv= Año gravable
+relacion.inicial.vehiculo.tipdoc=Tipo de documento
+relacion.inicial.vehiculo.numrefrec=No. referencia recaudo
+relacion.inicial.vehiculo.sticker=Sticker
+relacion.inicial.vehiculo.fecprese=Fecha de presentación
+relacion.inicial.vehiculo.totpag=Total Pagado
+relacion.inicial.vehiculo.totapovol=Total con aporte voluntario
 
+relacion.inicial.ica.titulo=ICA
+relacion.inicial.ica.aniograv=Año gravable
+relacion.inicial.ica.periodo=Periodo
+relacion.inicial.ica.numdoc=No. documento
 relacion.inicial.ica.tipdocu= Tipo de Documento
-relacion.inicial.ica.numdocu= Número de Documento
-relacion.inicial.ica.seleccionar= Seleccionar
+relacion.inicial.ica.visualizar=Visualizar
+relacion.inicial.ica.numrefrec= No. referencia recaudo
+relacion.inicial.ica.sticker= Sticker
+relacion.inicial.ica.fecprese=Fecha de presentación
+relacion.inicial.ica.totpag=Total pagado
 
-relacion.inicial.publicidad.numresol= Número de Resolución
-relacion.inicial.publicidad.tipvalla= Tipo de Valla
-relacion.inicial.publicidad.seleccionar= Seleccionar
+relacion.inicial.delineacion.titulo=Delineación Urbana
+relacion.inicial.delineacion.cdu=CDU
+relacion.inicial.delineacion.tipo=Tipo
+relacion.inicial.delineacion.modalidad=Modalidad
+relacion.inicial.delineacion.nurefrec=No. referencia recaudo
+relacion.inicial.delineacion.sticker=Sticker
+relacion.inicial.delineacion.tipdocu=Tipo de documento
+relacion.inicial.delineacion.fecprese=Fecha de presentación
+relacion.inicial.delineacion.totrete=Total retención
+relacion.inicial.delineacion.totpag=Total pagado
+
+relacion.inicial.delineacion.retencion.titulo=Retenciones - Delineación Urbana
+relacion.inicial.delineacion.retencion.cdu=CDU
+relacion.inicial.delineacion.retencion.liccons=Licencia de construcción
+relacion.inicial.delineacion.retencion.direccion=Dirección
+relacion.inicial.delineacion.retencion.visualizar=Visualizar
+relacion.inicial.delineacion.retencion.nota1=**Para visualizar la relación de pagos de tus retenciones por Radicados, da clic en el CDU correspondiente.
+relacion.inicial.delineacion.retencion.radicados=Radicados
+relacion.inicial.delineacion.retencion.tipo=Tipo
+relacion.inicial.delineacion.retencion.modalidad=Modalidad
+relacion.inicial.delineacion.retencion.nurefrec=No. referencia recaudo
+relacion.inicial.delineacion.retencion.sticker=Sticker
+relacion.inicial.delineacion.retencion.tipdocu=Tipo de documento
+relacion.inicial.delineacion.retencion.fecprese=Fecha de presentación
+relacion.inicial.delineacion.retencion.totpag=Total pagado
+
+relacion.inicial.gasolina.titulo=Sobretasa a la gasolina
+relacion.inicial.gasolina.tipdoc=Tipo de documento
+relacion.inicial.gasolina.numdoc=Número de documento
+relacion.inicial.gasolina.visualizar=Visualizar
+relacion.inicial.gasolina.aniograv=Año gravable
+relacion.inicial.gasolina.periodo=Periodo
+relacion.inicial.gasolina.nurefrec=No. referencia recaudo
+relacion.inicial.gasolina.sticker=Sticker
+relacion.inicial.gasolina.tipdoc=Tipo de documento
+relacion.inicial.gasolina.fecprese=Fecha de presentación
+relacion.inicial.gasolina.totpag=Total pagado
+
+relacion.inicial.publicidad.titulo=Publicidad Exterior
+relacion.inicial.publicidad.numresol= No. Resolución
+relacion.inicial.publicidad.tipvalla=Tipo de valla
+relacion.inicial.publicidad.visualizar=Visualizar
+relacion.inicial.publicidad.dirins=Dirección de instalación
+relacion.inicial.publicidad.orientacion=Orientación
+relacion.inicial.publicidad.regrisol=Registro No/ No Solicitud
+relacion.inicial.publicidad.numrefrec=No. referencia recaudo
+relacion.inicial.publicidad.sticker=Sticker
+relacion.inicial.publicidad.tipdoc=Tipo de documento
+relacion.inicial.publicidad.fecprese=Fecha de presentación
+relacion.inicial.publicidad.totpag=Total Pagado
 
 edocuenta.inicial.titulo= Estado de Cuenta
 edocuenta.inicial.tipo= Tipo de certificación
