Se agrega estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4071,30 +4071,118 @@ relacion.inicial.publicidad.fecprese=Fecha de presentación
 relacion.inicial.publicidad.totpag=Total Pagado
 
 edocuenta.inicial.titulo= Estado de Cuenta
+edocuenta.inicial.descripcion=El Estado de cuenta es la vista...
 edocuenta.inicial.tipo= Tipo de certificación
 edocuenta.inicial.selcimpuesto= Impuesto
 edocuenta.inicial.aniograv= Año Gravable
 edocuenta.inicial.periodo= Periodo
+edocuenta.inicial.tipiden=Tipo de identificación
+edocuenta.inicial.numiden=No. identificación
+edocuenta.inicial.nom=Nombre
+edocuenta.inicial.fecgen=Fecha de generación
+edocuenta.inicial.tasint=Tasa de interés
 edocuenta.inicial.cancelar= Cancelar
 edocuenta.inicial.generar= Generar
 
+edocuenta.inicial.predio.titulo= Predial Unificado
 edocuenta.inicial.predio.chip = CHIP
 edocuenta.inicial.predio.matricula = Matrícula Inmobiliaría
-edocuenta.inicial.predio.direccion = Dirección del Predio
-edocuenta.inicial.predio.seleccionar = Seleccionar
+edocuenta.inicial.predio.direccion = Dirección
+edocuenta.inicial.predio.visualizar=Visualizar
+edocuenta.inicial.predio.detalle= Detalle
+edocuenta.inicial.predio.resposa=Responsabilidad
+edocuenta.inicial.predio.saldcuenta=Saldo en cuenta
+edocuenta.inicial.predio.aniograv=Año gravable
+edocuenta.inicial.predio.desthacen=Destino hacendario
+edocuenta.inicial.predio.estado=Estado
+edocuenta.inicial.predio.participa= % Participación
+edocuenta.inicial.predio.saldocargo= Saldo a cargo
+edocuenta.inicial.predio.saldofavor=Saldo a favor
+edocuenta.inicial.predio.total=Total
 
+edocuenta.inicial.vehiculo.titulo= Vehículos
 edocuenta.inicial.vehiculo.placa= Placa
+edocuenta.inicial.vehiculo.modelo=Modelo
 edocuenta.inicial.vehiculo.marca= Marca
-edocuenta.inicial.vehiculo.seleccionar= Seleccionar
+edocuenta.inicial.vehiculo.linea=Línea
+edocuenta.inicial.vehiculo.visualizar= Visualizar
+edocuenta.inicial.vehiculo.aniograv=Año gravable
+edocuenta.inicial.vehiculo.estado=Estado
+edocuenta.inicial.vehiculo.saldocargo=Saldo a cargo
+edocuenta.inicial.vehiculo.saldofavor=Saldo a favor
+edocuenta.inicial.vehiculo.total=Total
+edocuenta.inicial.vehiculo.impuesto=Impuesto
+edocuenta.inicial.vehiculo.soldocuenta=Saldo en cuenta
 
+edocuenta.inicial.ica.titulo=ICA
 edocuenta.inicial.ica.tipdocu= Tipo de Documento
-edocuenta.inicial.ica.numdocu= Número de Documento
-edocuenta.inicial.ica.seleccionar= Seleccionar
+edocuenta.inicial.ica.numdocu= No. documento
+edocuenta.inicial.ica.visualizar= Visualizar
+edocuenta.inicial.ica.impuesto=Impuesto
+edocuenta.inicial.ica.saldocuenta=Saldo en cuenta
+edocuenta.inicial.ica.tiporegimen=Tipo de régimen
+edocuenta.inicial.ica.aniograv=Año gravable
+edocuenta.inicial.ica.periodo=Periodo
+edocuenta.inicial.ica.estado=Estado
+edocuenta.inicial.ica.saldocargo=Saldo a cargo
+edocuenta.inicial.ica.saldofavor=Saldo a favor
+edocuenta.inicial.ica.total=Total
 
-edocuenta.inicial.publicidad.numresol= Número de Resolución
+edocuenta.inicial.deliurbana.titulo=Delineación Urbana
+edocuenta.inicial.deliurbana.cdu=CDU
+edocuenta.inicial.deliurbana.licenconst=Licencia de construcción
+edocuenta.inicial.deliurbana.direccion=Dirección
+edocuenta.inicial.deliurbana.visualizar=Visualizar
+edocuenta.inicial.deliurbana.radicado=Radicado
+edocuenta.inicial.deliurbana.aniograv=Año gravable
+edocuenta.inicial.deliurbana.estado=Estado
+edocuenta.inicial.deliurbana.saldocargo=Saldo a cargo
+edocuenta.inicial.deliurbana.saldofavor=Saldo a favor
+edocuenta.inicial.deliurbana.total=Total
+edocuenta.inicial.deliurbana.impuesto=Impuesto
+edocuenta.inicial.deliurbana.saldocuenta=Saldo en cuenta
+edocuenta.inicial.deliurbana.chip=CHIP
+edocuenta.inicial.deliurbana.direcobre=Dirección de obra
+edocuenta.inicial.deliurbana.orientacion=Orientación
+edocuenta.inicial.deliurbana.vigencia=Vigencia
+
+edocuenta.inicial.gasolina.titulo=Sobretasa a la gasolina
+edocuenta.inicial.gasolina.anigrav=Año gravable
+edocuenta.inicial.gasolina.periodo=Periodo
+edocuenta.inicial.gasolina.estado=Estado
+edocuenta.inicial.gasolina.saldocargo=Saldo a cargo
+edocuenta.inicial.gasolina.saldofavor=Saldo a favor
+edocuenta.inicial.gasolina.total=Total
+edocuenta.inicial.gasolina.tipdoc=Tipo de documento
+edocuenta.inicial.gasolina.numdoc=Número de documento
+edocuenta.inicial.gasolina.visualizar=Visualizar
+edocuenta.inicial.gasolina.impuesto=Impuesto
+edocuenta.inicial.gasolina.saldocuenta=Saldo en cuenta
+
+edocuenta.inicial.publicidad.titulo=Publicidad exterior
+edocuenta.inicial.publicidad.numresol= No. de Resolución
 edocuenta.inicial.publicidad.tipvalla= Tipo de Valla
-edocuenta.inicial.publicidad.seleccionar= Seleccionar
+edocuenta.inicial.publicidad.visualizar= Visualizar
+edocuenta.inicial.publicidad.impuesto=Impuesto
+edocuenta.inicial.publicidad.direccion=Dirección de valla
+edocuenta.inicial.publicidad.orientacion=Orentación de la valla
+edocuenta.inicial.publicidad.saldocuenta=Saldo en cuenta
+edocuenta.inicial.publicidad.numresol=No. Resolución
+edocuenta.inicial.publicidad.anigrav=Año gravable
+edocuenta.inicial.publicidad.desthacen=Destino hacendario
+edocuenta.inicial.publicidad.estado=Estado
+edocuenta.inicial.publicidad.saldocargo=Saldo a cargo
+edocuenta.inicial.publicidad.saldofavor=Saldo a favor
+edocuenta.inicial.publicidad.total=Total
 
+edocuenta.inicial.obligaciones.titulo=Obligaciones no tributarias
+edocuenta.inicial.obligaciones.concepto=Concepto
+edocuenta.inicial.obligaciones.anigrav=Año gravable
+edocuenta.inicial.obligaciones.estado=Estado
+edocuenta.inicial.obligaciones.saldocargo=Saldo a cargo
+edocuenta.inicial.obligaciones.saldofavor=Saldo a favor
+edocuenta.inicial.obligaciones.total=Total
+edocuenta.inicial.obligaciones.destino=Destino hacendario
 
 pse.message.error.no.connection=Occurio un error con la conexión a PSE
 pse.message.info.done.transaction.with.status=Transacción realizada con éxito y pendiente de procesar
