Cambios de ica adjuntar archivo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1,4 +1,4 @@
-# put localizations or messages used in your web application into this file
+﻿# put localizations or messages used in your web application into this file
 #
 
 text.unidentified.customer=No identificado
@@ -4436,7 +4436,7 @@ ica.declaracion.valor.montoret=Monto que retuvieron en el periodo
 ica.declaracion.valor.calcular=Calcular
 
 
-ica.declaracion.deducciones.titulo= Deducciones, exenciones y actividades no sujetas
+ica.declaracion.deducciones.titulo= Devoluciones, rebajas, descuentos, deducciones, exenciones y actividades no sujetas
 ica.declaracion.deducciones.deduccion=Deducción
 ica.declaracion.deducciones.monto=Valor deducción
 
